# cortex

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml  docs-pages.yml  python-package-conda.yml  unit.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/cortex/: index.rst.txt
autoapi/: index.html
autoapi/cortex/: index.html
autoapi/cortex/acquisition/: index.html
autoapi/cortex/assets/: index.html
autoapi/cortex/attribution/: index.html
autoapi/cortex/cmdline/: index.html
autoapi/cortex/config/: index.html
autoapi/cortex/constants/: index.html
autoapi/cortex/corruption/: index.html
autoapi/cortex/data/: index.html
autoapi/cortex/io/: index.html
autoapi/cortex/logging/: index.html
autoapi/cortex/metrics/: index.html
autoapi/cortex/model/: index.html
autoapi/cortex/optim/: index.html
autoapi/cortex/task/: index.html
autoapi/cortex/tokenization/: index.html
autoapi/cortex/transforms/: index.html
cortex/: __init__.py
cortex/acquisition/: __init__.py  _graph_nei.py
cortex/assets/protein_seq_tokenizer_32/: tokenizer_config.json  vocab.txt
cortex/attribution/: __init__.py  _occlusion.py
cortex/cmdline/: train_cortex_model.py
cortex/config/: __init__.py  neural_tree_config.py
cortex/config/hydra/: gingko_demo.yaml  train_gpt.yaml  train_hf_protein_model.yaml  train_protein_model.yaml
cortex/config/wandb/: protein_model_sweep.yaml
cortex/constants/: __init__.py  _protein_constants.py
cortex/corruption/: __init__.py  _abstract_corruption.py  _corruption_layer_v2.py  _diffusion_noise_schedule.py  _diffusion_noise_schedules.py  _gaussian_corruption.py  _mask_corruption.py  _static_corruption.py  _substitution_corruption.py
cortex/data/data_module/: __init__.py  _data_module.py  _hf_task_data_module.py  _task_data_module.py
cortex/data/dataset/: __init__.py  _cortex_dataset.py  _data_frame_dataset.py  _dataframe_dataset.py  _gfp_fluorescence.py  _numpy_dataset.py  _rfp_dataset.py  _rfp_dataset_v2.py  _tape_combined.py  _tape_fluorescence.py  _tape_stability.py  _transformed_dataset.py
cortex/data/samplers/: __init__.py  _minority_upsampler.py  _randomized_minority_sampler.py
cortex/io/: __init__.py  _download.py  _load_hydra_config.py  _load_model_checkpoint.py  _md5.py  _parse_s3_path.py  _verify_checksum.py  _verify_integrity.py
cortex/logging/: __init__.py  _wandb_setup.py
cortex/metrics/: __init__.py  _blosum.py  _edit_dist.py  _spearman_rho.py
cortex/model/: __init__.py  _infer_with_model.py  _weight_averaging.py  neural_tree_model.py
cortex/model/block/: __init__.py  _conv1d_resid_block.py  _transformer_block.py  _transformer_encoder_block.py
cortex/model/blocks/: _seqcnn_resid_block.py
cortex/model/branch/: __init__.py  _abstract_branch.py  _conv1d_branch.py  _transformer_branch.py  _transformer_decoder_branch.py  _transformer_encoder_branch.py
cortex/model/callbacks/: __init__.py  _weight_averaging_callback.py
cortex/model/elemental/: __init__.py  _apply.py  _bidirectional_self_attention.py  _causal_self_attention.py  _ddp_standardize.py  _expression.py  _functional.py  _layernorm.py  _mean_pooling.py  _mlp.py  _pooling_self_attention.py  _sine_pos_encoder.py
cortex/model/leaf/: __init__.py  _abstract_leaf.py  _autoregressive_lm_leaf.py  _classifier_leaf.py  _denoising_lm_leaf.py  _regressor_leaf.py  _seq_regressor_leaf.py
cortex/model/root/: TODO_HF_STANDARDIZATION.md  __init__.py  _abstract_root.py  _conv1d_root.py  _huggingface_root.py  _transformer_decoder_root.py  _transformer_encoder_root.py  _transformer_root.py  _transformer_root_v2.py  _transformer_root_v3.py
cortex/model/tree/: __init__.py  _abstract_tree.py  _neural_tree_lightning_v2.py  _seq_model_tree.py
cortex/model/trunk/: __init__.py  _abstract_trunk.py  _sum_trunk.py
cortex/optim/: __init__.py  _coordinate_selection.py  _initialization.py
cortex/optim/generative/: __init__.py  _lambo.py  _lambo_v2.py
cortex/task/: __init__.py  _abstract_task.py  _autoregressive_lm_task.py  _classification.py  _denoising_lm_task.py  _regression.py  _sequence_regression.py
cortex/tokenization/: __init__.py  _cached_bert_tokenizer.py  _protein_seq_tokenizer.py
cortex/transforms/: __init__.py  _pad_transform.py  _to_tensor.py  _tokenize_igg_ag_df.py  _tokenizer_transform.py  _transform.py
cortex/transforms/functional/: __init__.py  _to_tensor.py  _tokenize_igg_ag_df.py
docs/: task_leaf_config_issue.md
docs/source/: conf.py  index.rst
examples/: hf_fluorescence_fast.py
tests/cortex/config/: test_neural_tree_config.py
tests/cortex/corruption/: test_gaussian_corruption.py  test_mask_corruption.py  test_static_corruption.py  test_substitution_corruption.py
tests/cortex/data/: test_transform_migration.py
tests/cortex/metrics/: test_blosum.py
tests/cortex/model/: test_neural_tree_model.py
tests/cortex/task/: test_denoising_lm_task.py  (+1 more)
tutorials/: 1_neural_tree_anatomy.ipynb  2_defining_a_task.ipynb  3_training_a_neural_tree.ipynb  4_guided_diffusion.ipynb
tutorials/hydra/: 2_defining_a_task.yaml  3_training_a_neural_tree.yaml  4_guided_diffusion.yaml
(+282 files in other folders)
